fixed svg placement and always behind

--- a/styles.css
+++ b/styles.css
@@ -6,4 +6,13 @@ body {
     flex-direction: column;
     width: 100vw;
     height: 100vh;
+    justify-content: center;
+    align-items: center;
+}
+
+svg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -10;
 }
